# prime_numbers_c

./: .editorconfig  .gitignore  CMakeLists.txt  bit_set.c  main.c  time.h
